--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 <div class="pure-menu pure-menu-open pure-menu-horizontal">
     <a href="#" class="pure-menu-heading">Your Logo</a>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="https://smu-paypal-2015.herokuapp.com/feedback.html">FeedBack</a></li>
         <li class="pure-menu-selected"><a href="#">Pricing</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
